add frontend for db status

--- a/frontend/src/app/pages/landing/landing.page.component.html
+++ b/frontend/src/app/pages/landing/landing.page.component.html
@@ -7,6 +7,7 @@
         label="Get Database Status"
         type="button"
         class="p-button-raised"
+        [routerLink]="['/status']"
       ></button>
       <button
         pButton
