--- a/frontend/src/app/pages/landing/landing.page.component.css
+++ b/frontend/src/app/pages/landing/landing.page.component.css
@@ -1,27 +1,36 @@
 .grid {
     display: flex;
-    flex-wrap: wrap;
-    margin-right: 0;
-    margin-left: 0;
-    margin-top: 0;
+    flex-wrap: nowrap;  
+    justify-content: space-evenly;
+    align-items: stretch;
+    gap: 20px; 
+    margin-top: 10vh;
+    padding: 0 20px; 
+    width: 100%; 
+    height: 10px;
+}
+.p-card {
+    flex: 1 0 45%;
+    box-shadow: 0 4px 16px rgba(0,0,0,0.1);
+    border-radius: 8px;
+    margin: 5px; 
+    width: auto;
+    flex-direction: column;
 }
 
-.hero-column {
-    flex: 0 0 auto;
-    padding: 0;
-    width: 50%;
+.p-card .flex {
+    display: flex;
+    flex-direction: column;
+    gap: 10px; 
+    padding: 20px; 
 }
 
-.feature-column {
-    flex: 0 0 auto;
-    padding: 0;
-    width: 33%;
+.p-button-raised {
+    width: 100%;
+    transition: background-color 0.3s, box-shadow 0.3s; 
 }
 
-.feature-icon-box {
-    display: inline-block;
-    padding: 1rem;
-    margin-bottom: 1.5rem;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.03), 0px 0px 2px rgba(0, 0, 0, 0.06), 0px 2px 6px rgba(0, 0, 0, 0.12);
-    background-color: var(--surface-card);
+.p-button-raised:hover {
+    box-shadow: 0 6px 12px rgba(0,0,0,0.2);
+    background-color: #0056b3; 
 }
