--- a/frontend/src/app/pages/landing/landing.page.component.html
+++ b/frontend/src/app/pages/landing/landing.page.component.html
@@ -1,5 +1,5 @@
-<div class="grid" [style]="{'margin-top': '35vh'}">
-  <p-card header="General Searching & Filtering" subheader="Ad-hoc availability to the database" class="col-6">
+<div class="grid" [style]="{'margin-top': '10vh'}">
+  <p-card header="General Searching & Filtering" subheader="Ad-hoc availability to the database" class="p-card">
     <div class="flex flex-column gap-2">
       <button
         pButton
@@ -32,7 +32,7 @@
       ></button>
     </div>
   </p-card>
-  <p-card header="Complex Trend Queries" subheader="Predefined deep dives into the data" class="col-6">
+  <p-card header="Complex Trend Queries" subheader="Predefined deep dives into the data" class="p-card">
     <div class="flex flex-column gap-2">
       <button
         pButton
