Updated payload functionality for certain pages

--- a/frontend/src/app/pages/wildfire-sizes-based-on-geography/wildfire-sizes-based-on-geography.component.html
+++ b/frontend/src/app/pages/wildfire-sizes-based-on-geography/wildfire-sizes-based-on-geography.component.html
@@ -13,7 +13,7 @@
       </div>
       <div class="card">
         <label for="geographicArea">*Geographic Area (Optional):</label>
-        <input id="geographicArea" type="text" placeholder="Geographic Area" />
+        <input id="geographicArea" type="text" [(ngModel)]="geographicArea" name="geographicArea" placeholder="Geographic Area" />
       </div>
       <div class="card">
         <button type="submit" class="btn-primary">View Results</button>
