--- a/frontend/src/app/pages/size-of-wildfire-types/size-of-wildfire-types.component.html
+++ b/frontend/src/app/pages/size-of-wildfire-types/size-of-wildfire-types.component.html
@@ -23,7 +23,7 @@
       </div>
       <div class="card">
         <label for="wildfireType">Wildfire Type (Optional):</label>
-        <input id="wildfireType" type="text" placeholder="Wildfire Type" />
+        <input id="wildfireType" type="text" [(ngModel)]="wildfireType" name="wildfireType" placeholder="Wildfire Type" />
       </div>
       <div class="card">
         <button type="submit" class="btn-primary">View Results</button>
