--- a/frontend/src/app/pages/size-of-wildfire-types/size-of-wildfire-types.component.html
+++ b/frontend/src/app/pages/size-of-wildfire-types/size-of-wildfire-types.component.html
@@ -13,17 +13,100 @@
       </div>
       <div class="card">
         <label for="reportingAgency">Reporting Agency (Optional):</label>
-        <input
+        <select
           id="reportingAgency"
-          type="text"
           [(ngModel)]="reportingAgency"
           name="reportingAgency"
-          placeholder="Reporting Agency"
-        />
+          class="form-control"
+        >
+          <option value="">Select an Agency</option>
+          <option value="AG">AG - Air Guard</option>
+          <option value="ANC">ANC - Alaska Native Corporation</option>
+          <option value="BIA">BIA - Bureau of Indian Affairs</option>
+          <option value="BLM">BLM - Bureau of Land Management</option>
+          <option value="BOEM">BOEM - Bureau of Ocean Energy Management</option>
+          <option value="BOR">BOR - Bureau of Reclamation</option>
+          <option value="BSEE">
+            BSEE - Bureau of Safety and Environmental Enforcement
+          </option>
+          <option value="C&L">C&L - County & Local</option>
+          <option value="CDF">
+            CDF - California Department of Forestry & Fire Protection
+          </option>
+          <option value="DC">DC - Department of Corrections</option>
+          <option value="DFE">DFE - Division of Forest Environment</option>
+          <option value="DFF">
+            DFF - Division of Forestry Fire & State Lands
+          </option>
+          <option value="DFL">DFL - Division of Forests and Land</option>
+          <option value="DFR">DFR - Division of Forest Resources</option>
+          <option value="DL">DL - Department of Lands</option>
+          <option value="DNR">DNR - Department of Natural Resources</option>
+          <option value="DNRC">
+            DNRC - Department of Natural Resources and Conservation
+          </option>
+          <option value="DNRF">
+            DNRF - Department of Natural Resources Forest Service
+          </option>
+          <option value="DOA">DOA - Department of Agriculture</option>
+          <option value="DOC">DOC - Department of Conservation</option>
+          <option value="DOE">DOE - Department of Energy</option>
+          <option value="DOF">DOF - Department of Forestry</option>
+          <option value="DVF">DVF - Division of Forestry</option>
+          <option value="DWF">DWF - Division of Wildland Fire</option>
+          <option value="EPA">EPA - Environmental Protection Agency</option>
+          <option value="FC">FC - Forestry Commission</option>
+          <option value="FEMA">
+            FEMA - Federal Emergency Management Agency
+          </option>
+          <option value="FFC">FFC - Bureau of Forest Fire Control</option>
+          <option value="FFP">FFP - Forest Fire Protection</option>
+          <option value="FFS">FFS - Forest Fire Service</option>
+          <option value="FR">FR - Forest Rangers</option>
+          <option value="FS">FS - Forest Service</option>
+          <option value="FWS">FWS - Fish & Wildlife Service</option>
+          <option value="HQ">HQ - Headquarters</option>
+          <option value="JC">JC - Job Corps</option>
+          <option value="NBC">NBC - National Business Center</option>
+          <option value="NG">NG - National Guard</option>
+          <option value="NNSA">
+            NNSA - National Nuclear Security Administration
+          </option>
+          <option value="NPS">NPS - National Park Service</option>
+          <option value="NWS">NWS - National Weather Service</option>
+          <option value="OES">OES - Office of Emergency Services</option>
+          <option value="PRI">PRI - Private</option>
+          <option value="SF">SF - State Forestry</option>
+          <option value="SFS">SFS - State Forest Service</option>
+          <option value="SP">SP - State Parks</option>
+          <option value="TNC">TNC - The Nature Conservancy</option>
+          <option value="USA">USA - United States Army</option>
+          <option value="USACE">
+            USACE - United States Army Corps of Engineers
+          </option>
+          <option value="USAF">USAF - United States Air Force</option>
+          <option value="USGS">USGS - United States Geological Survey</option>
+          <option value="USN">USN - United States Navy</option>
+        </select>
       </div>
       <div class="card">
         <label for="wildfireType">Wildfire Type (Optional):</label>
-        <input id="wildfireType" type="text" [(ngModel)]="wildfireType" name="wildfireType" placeholder="Wildfire Type" />
+        <select name="wildfireType" id="wildfireType" [(ngModel)]="wildfireType" class="form-control">
+          <option value="">Select a Fire Cause</option>
+          <option value="Powerline">Powerline</option>
+          <option value="Equipment Use">Equipment Use</option>
+          <option value="Arson">Arson</option>
+          <option value="Missing/Undefined">Missing/Undefined</option>
+          <option value="Fireworks">Fireworks</option>
+          <option value="Campfire">Campfire</option>
+          <option value="Railroad">Railroad</option>
+          <option value="Lightning">Lightning</option>
+          <option value="Miscellaneous">Miscellaneous</option>
+          <option value="Structure">Structure</option>
+          <option value="Children">Children</option>
+          <option value="Debris Burning">Debris Burning</option>
+          <option value="Smoking">Smoking</option>
+        </select>
       </div>
       <div class="card">
         <button type="submit" class="btn-primary">View Results</button>
