--- a/frontend/src/app/pages/wildfire-sizes-based-on-geography/wildfire-sizes-based-on-geography.component.html
+++ b/frontend/src/app/pages/wildfire-sizes-based-on-geography/wildfire-sizes-based-on-geography.component.html
@@ -12,8 +12,21 @@
         <p-calendar [(ngModel)]="endDate" name="endDate"></p-calendar>
       </div>
       <div class="card">
-        <label for="geographicArea">*Geographic Area (Optional):</label>
-        <input id="geographicArea" type="text" [(ngModel)]="geographicArea" name="geographicArea" placeholder="Geographic Area" />
+        <label for="geographicArea">Geographic Area (Optional):</label>
+        <select name="geographicArea" id="geographicArea" [(ngModel)]="geographicArea" class="form-control">
+          <option value="">Select a Region</option>
+          <option value="NA">NA - National</option>
+          <option value="IN">IN - International</option>
+          <option value="AK">AK - Alaska</option>
+          <option value="CA">CA - California</option>
+          <option value="EA">EA - Eastern Area</option>
+          <option value="GB">GB - Great Basin</option>
+          <option value="NR">NR - Northern Rockies</option>
+          <option value="NW">NW - Northwest</option>
+          <option value="RM">RM - Rocky Mountain</option>
+          <option value="SA">SA - Southern Area</option>
+          <option value="SW">SW - Southwest</option>
+        </select>
       </div>
       <div class="card">
         <button type="submit" class="btn-primary">View Results</button>
@@ -22,15 +35,5 @@
     <div class="chart-container">
       <p-chart type="line" [data]="data" [options]="options"></p-chart>
     </div>
-  </div>
-  <div>
-    *(CAMBCIFC=Canadian Interagency Forest Fire Centre, USAKCC=Alaska Interagency
-    Coordination Center, USCAONCC=Northern California Area Coordination Center,
-    USCAOSCC=Southern California Coordination Center, USCORMCC=Rocky Mountain
-    Area Coordination Center, USGASAC=Southern Area Coordination Center,
-    USIDNIC=National Interagency Coordination Center, USMTNRC=Northern Rockies
-    Coordination Center, USNMSWC=Southwest Area Coordination Center,
-    USORNWC=Northwest Area Coordination Center, USUTGBC=Western Great Basin
-    Coordination Center, USWIEACC=Eastern Area Coordination Center)
   </div>
 </form>
