--- a/frontend/src/app/pages/wildfire-sizes-based-on-geography/wildfire-sizes-based-on-geography.component.html
+++ b/frontend/src/app/pages/wildfire-sizes-based-on-geography/wildfire-sizes-based-on-geography.component.html
@@ -1,5 +1,5 @@
 <form class="content-section" (ngSubmit)="submitsSizesBasedOnGeoForm()">
-  <h1>Wildfire Sizes Based on Geography</h1>
+  <h1>Wildfire Sizes Based on State</h1>
   <p class="description">Select a category to view data and trends:</p>
   <div class="flex-container">
     <div class="form-container">
@@ -12,38 +12,60 @@
         <p-calendar [(ngModel)]="endDate" name="endDate"></p-calendar>
       </div>
       <div class="card">
-        <label for="geographicArea">Geographic Area (Optional):</label>
-        <select
-          name="geographicArea"
-          id="geographicArea"
-          [(ngModel)]="geographicArea"
-          class="form-control"
-        >
-          <option value="">Select a Region</option>
-          <option value="CAMBCIFC">
-            Canadian Interagency Forest Fire Centre
-          </option>
-          <option value="USAKCC">Alaska Interagency Coordination Center</option>
-          <option value="USCAONCC">
-            Northern California Area Coordination Center
-          </option>
-          <option value="USCAOSCC">
-            Southern California Coordination Center
-          </option>
-          <option value="USCORMCC">
-            Rocky Mountain Area Coordination Center
-          </option>
-          <option value="USGASAC">Southern Area Coordination Center</option>
-          <option value="USIDNIC">
-            National Interagency Coordination Center
-          </option>
-          <option value="USMTNRC">Northern Rockies Coordination Center</option>
-          <option value="USNMSWC">Southwest Area Coordination Center</option>
-          <option value="USORNWC">Northwest Area Coordination Center</option>
-          <option value="USUTGBC">
-            Western Great Basin Coordination Center
-          </option>
-          <option value="USWIEACC">Eastern Area Coordination Center</option>
+        <label for="geographicArea">State (Optional):</label>
+        <select name="geographicArea" id="geographicArea" [(ngModel)]="geographicArea" class="form-control">
+          <option value="">Select a State</option>
+          <option value="AL">Alabama</option>
+          <option value="AK">Alaska</option>
+          <option value="AZ">Arizona</option>
+          <option value="AR">Arkansas</option>
+          <option value="CA">California</option>
+          <option value="CO">Colorado</option>
+          <option value="CT">Connecticut</option>
+          <option value="DE">Delaware</option>
+          <option value="DC">District Of Columbia</option>
+          <option value="FL">Florida</option>
+          <option value="GA">Georgia</option>
+          <option value="HI">Hawaii</option>
+          <option value="ID">Idaho</option>
+          <option value="IL">Illinois</option>
+          <option value="IN">Indiana</option>
+          <option value="IA">Iowa</option>
+          <option value="KS">Kansas</option>
+          <option value="KY">Kentucky</option>
+          <option value="LA">Louisiana</option>
+          <option value="ME">Maine</option>
+          <option value="MD">Maryland</option>
+          <option value="MA">Massachusetts</option>
+          <option value="MI">Michigan</option>
+          <option value="MN">Minnesota</option>
+          <option value="MS">Mississippi</option>
+          <option value="MO">Missouri</option>
+          <option value="MT">Montana</option>
+          <option value="NE">Nebraska</option>
+          <option value="NV">Nevada</option>
+          <option value="NH">New Hampshire</option>
+          <option value="NJ">New Jersey</option>
+          <option value="NM">New Mexico</option>
+          <option value="NY">New York</option>
+          <option value="NC">North Carolina</option>
+          <option value="ND">North Dakota</option>
+          <option value="OH">Ohio</option>
+          <option value="OK">Oklahoma</option>
+          <option value="OR">Oregon</option>
+          <option value="PA">Pennsylvania</option>
+          <option value="RI">Rhode Island</option>
+          <option value="SC">South Carolina</option>
+          <option value="SD">South Dakota</option>
+          <option value="TN">Tennessee</option>
+          <option value="TX">Texas</option>
+          <option value="UT">Utah</option>
+          <option value="VT">Vermont</option>
+          <option value="VA">Virginia</option>
+          <option value="WA">Washington</option>
+          <option value="WV">West Virginia</option>
+          <option value="WI">Wisconsin</option>
+          <option value="WY">Wyoming</option>
         </select>
       </div>
       <div class="card">
