implement fire incident search table

--- a/frontend/src/app/pages/landing/landing.page.component.html
+++ b/frontend/src/app/pages/landing/landing.page.component.html
@@ -15,6 +15,7 @@
         label="Search Fire Incidents"
         type="button"
         class="p-button-raised"
+        [routerLink]="['/fire-incident-search']"
       ></button>
       <button
         pButton
