allow filters to be empty

--- a/frontend/src/app/pages/fire-incident-search/fire-incident-search.page.component.html
+++ b/frontend/src/app/pages/fire-incident-search/fire-incident-search.page.component.html
@@ -5,7 +5,7 @@
       <input
         type="text"
         pInputText
-        [ngModel]="sizeCategoryFilter()"
+        [ngModel]="sizeCategoryFilter$()"
         (ngModelChange)="onFilterChange($event, 'size_category')"
         [disabled]="!dataReady"
       />
