update fire incident table

--- a/frontend/src/app/pages/fire-incident-search/fire-incident-search.page.component.html
+++ b/frontend/src/app/pages/fire-incident-search/fire-incident-search.page.component.html
@@ -71,6 +71,7 @@
   </p-table>
   <div>
     <p-paginator
+      #paginatorRef
       [pageLinkSize]="10"
       [rows]="rowsPerPage$()"
       [totalRecords]="totalSize$()"
