--- a/frontend/src/app/pages/landing/landing.page.component.html
+++ b/frontend/src/app/pages/landing/landing.page.component.html
@@ -31,6 +31,7 @@
         label="Search Reporting Agencies"
         type="button"
         class="p-button-raised"
+        [routerLink]="['/reporting-agency-search']"
       ></button>
     </div>
   </p-card>
