update Wildfire Types Based on Geography query

--- a/frontend/src/app/pages/WildfireChangesInSizeAndFrequency/wildfires-changes/wildfires-changes.component.html
+++ b/frontend/src/app/pages/WildfireChangesInSizeAndFrequency/wildfires-changes/wildfires-changes.component.html
@@ -30,7 +30,7 @@
         />
       </div>
       <div class="col-4 card">
-        <button type="submit" class="btn-primary">View Results</button>
+        <button pButton type="submit" class="btn-primary">View Results</button>
       </div>
     </div>
     <div class="flex flex-row gap-2">
