implement agency containment time vs fire size query

--- a/frontend/src/app/pages/WildfireChangesInSizeAndFrequency/wildfires-changes/wildfires-changes.component.html
+++ b/frontend/src/app/pages/WildfireChangesInSizeAndFrequency/wildfires-changes/wildfires-changes.component.html
@@ -1,6 +1,6 @@
 <form class="content-section" (ngSubmit)="submitSizeAndFrequencyForm()">
   <h1>Wildfire Changes In Size And Frequency</h1>
-  <p class="description">Select a category to view data and trends:</p>
+  <p class="description">Select a category to view data and trends</p>
   <div class="flex flex-column gap-2">
     <div class="flex flex-row gap-2">
       <div class="col-4 card">
